[gd_scene load_steps=38 format=2]

[ext_resource path="res://assets/art/eye.png" type="Texture" id=1]
[ext_resource path="res://assets/art/bulb.png" type="Texture" id=2]
[ext_resource path="res://assets/art/stem.png" type="Texture" id=3]
[ext_resource path="res://assets/art/flower.png" type="Texture" id=4]
[ext_resource path="res://scenes/Player/PlayerSprite.gd" type="Script" id=5]
[ext_resource path="res://assets/art/eye_burst.png" type="Texture" id=6]
[ext_resource path="res://assets/art/eye_projectile.png" type="Texture" id=7]
[ext_resource path="res://assets/sound/jump.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 25 ), SubResource( 26 ), SubResource( 25 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="Animation" id=9]
resource_name = "blinking"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.8, 2.3, 2.6, 3, 4, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 5, 0, 4, 0, 3 ]
}

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=35]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.09 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -1.0, 0.0 ]
}

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=28]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -1.0, 0.0 ]
}

[sub_resource type="Animation" id=34]
resource_name = "Trigger Projectile"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../eye_burst:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../eye_anim:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "trigger_jump"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../eye_burst:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("../jump audio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0 )
}

[node name="PlayerSprite" type="Node2D"]
script = ExtResource( 5 )

[node name="stem" type="AnimatedSprite" parent="."]
position = Vector2( 9, 460.5 )
frames = SubResource( 14 )
playing = true

[node name="eye_anim" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -2.00002, 15.0002 )
scale = Vector2( 0.818359, 0.818359 )
frames = SubResource( 27 )
frame = 5

[node name="Eye_animationplayer" type="AnimationPlayer" parent="eye_anim"]
autoplay = "blinking"
anims/blinking = SubResource( 9 )

[node name="flower_anim" type="AnimatedSprite" parent="."]
position = Vector2( -14, 834.5 )
frames = SubResource( 19 )
frame = 1
playing = true

[node name="bulb_anim" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 77, -18.0001 )
frames = SubResource( 5 )
playing = true

[node name="projectile" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )

[node name="projectile_animationplayer2" type="AnimationPlayer" parent="projectile"]
autoplay = "Stretchy"
playback_speed = 0.31
anims/Stretchy = SubResource( 35 )

[node name="eye_burst" type="AnimatedSprite" parent="."]
position = Vector2( 9.24993, 13.0002 )
scale = Vector2( 0.817383, 0.818359 )
frames = SubResource( 33 )

[node name="burst_animationplayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../projectile")
autoplay = "Stretchy"
playback_speed = 2.0
anims/Stretchy = SubResource( 28 )
"anims/Trigger Projectile" = SubResource( 34 )

[node name="jump audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
max_distance = 5000.0
attenuation = 0.225313
